Trying different ways to fix visibility issue on phone for help command

--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ html, body {
 /* Command text */
 .command {
     display: inline-block;
-    width: 25%;
+    width: auto;
     text-align: left;
 }
 
